Fix a11y contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --foreground: #171717;
   --color-primary: #049EDB;
   --color-secondary: #024059;
-  --color-tertiary: #04BF8A;
+  --color-tertiary: #135a76;
   --color-accent: #03A64A;
   --color-error: #532523;
   --color-delete: #FF0000;
